Renamed minecraft-server to minecraft-service.